...
      return 'Email cannot be null or empty.';
    }

    final emailRegex = RegExp(r'^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$');

    if (!emailRegex.hasMatch(email)) {
      return 'Email address is not in the correct format.';
    }

    final emailParts = email.split('@');
    final username = emailParts[0];
    final domain = emailParts[1];

...
              onPressed: () {
                Navigator.of(context).pop(false);
              },
              child: const Text('Cancel'),
            ),
            TextButton(
              key: const Key("confirm"),
              onPressed: () {
                Navigator.of(context).pop(true);
              },
              child: const Text('Confirm'),
            ),
          ],
...
    if (confirmed != null && confirmed) {
      final String username = _usernameController.text.trim();
      final String email = _emailController.text.trim();
      final String password = _passwordController.text.trim();

      if (username.isEmpty || password.isEmpty || email.isEmpty) {
        showErrorSnackBar("Please fill in all three fields.");
        return;
      }

      if (username.length < 4 || password.length < 8) {
        if (username.length < 4 && password.length >= 8) {
          showErrorSnackBar("Username must be at least 4 characters.");
        }
        if (username.length >= 4 && password.length < 8) {
          showErrorSnackBar("Password must be at least 8 characters.");
        }
        if (username.length < 4 && password.length < 8) {
          showErrorSnackBar("Username and password are too short.");
        }
        return;
      }
...

      ref
          .read(userListProvider(ref.read(userSessionProvider).token!).notifier)
          .updateUser(
              User(
                id: ref.read(userSessionProvider).id,
                username: _usernameController.text,
                email: _emailController.text,
                joinDate: ref.read(userSessionProvider).joinDate,
                role: ref.read(userSessionProvider).role,
              ),
              _passwordController.text);
      ref.read(userSessionProvider.notifier).setUser(
            User(
...
              joinDate: ref.read(userSessionProvider).joinDate,
              role: ref.read(userSessionProvider).role,
              token: ref.read(userSessionProvider).token,
            ),
          );
      ref.invalidate(currentUserProvider);
      showSuccessSnackBar("Account updated successfully.");
    }
  }

  Future<void> _showDeleteConfirmationDialog() async {
    bool? confirmed = await showDialog<bool>(
      context: context,
...
              onPressed: () {
                Navigator.of(context).pop(false);
              },
              child: const Text('Cancel'),
            ),
            TextButton(
              key: const Key("terminated"),
              onPressed: () {
                Navigator.of(context).pop(true);
              },
              child: const Text('Confirm'),
            ),
          ],
...
                                style: const TextStyle(color: Colors.white),
                              ),
                            ],
                          ),
                          const SizedBox(height: 10),
                          TextField(
                            key: const Key("username_field"),
                            controller: _usernameController,
                            style: const TextStyle(color: Colors.grey),
                            decoration: InputDecoration(
                              labelText: 'Username',
                              labelStyle: const TextStyle(color: Colors.grey),
                              prefixIcon: const Icon(Icons.person),
...
                              prefixIcon: const Icon(Icons.email),
                              prefixIconColor: Colors.blue[700],
                            ),
                          ),
                          const SizedBox(height: 10),
                          TextField(
                            key: const Key("newPassword"),
                            controller: _passwordController,
                            obscureText: true,
                            style: const TextStyle(color: Colors.grey),
                            decoration: InputDecoration(
                              labelText: 'New Password',
                              labelStyle: const TextStyle(color: Colors.grey),
...
                          ),
                          const SizedBox(height: 20),
                          ButtonBar(
                            alignment: MainAxisAlignment.center,
                            children: [
                              ElevatedButton.icon(
                                key: const Key("terminate"),
                                onPressed: _showDeleteConfirmationDialog,
                                style: ButtonStyle(
                                  backgroundColor:
                                      WidgetStateProperty.all(Colors.red[700]),
                                ),
                                label: const Text('Terminate'),
                                icon: const Icon(Icons.dangerous_rounded),
                              ),
                              const SizedBox(width: 10),
                              ElevatedButton.icon(
                                key: const Key("update"),
                                onPressed: _showUpdateConfirmationDialog,
                                style: ButtonStyle(
                                  backgroundColor:
                                      WidgetStateProperty.all(Colors.blue[700]),
                                ),
                                label: const Text('Update'),
...
