...
                    ),
                  ),
                  const SizedBox(
                    height: 10,
                  ),
                  TextField(
                    key: const Key("email_field"),
                    controller: _emailController,
                    style: const TextStyle(color: Colors.grey),
                    decoration: InputDecoration(
                      labelText: 'Email address',
                      labelStyle: const TextStyle(color: Colors.grey),
                      prefixIcon: const Icon(Icons.email_rounded),
...
                        borderSide: const BorderSide(color: Colors.grey),
                      ),
                    ),
                  ),
                  const SizedBox(height: 10),
                  TextField(
                    key: const Key("password_field"),
                    controller: _passwordController,
                    obscureText: true,
                    style: const TextStyle(color: Colors.grey),
                    decoration: InputDecoration(
                      labelText: 'Password',
                      labelStyle: const TextStyle(color: Colors.grey),
...
                        borderSide: const BorderSide(color: Colors.grey),
                      ),
                    ),
                  ),
                  const SizedBox(height: 10),
                  TextField(
                    key: const Key("confirm_password_field"),
                    controller: _confirmPasswordController,
                    obscureText: true,
                    style: const TextStyle(color: Colors.grey),
                    decoration: InputDecoration(
                      labelText: 'Confirm Password',
                      labelStyle: const TextStyle(color: Colors.grey),
...
                        borderSide: const BorderSide(color: Colors.grey),
                      ),
                    ),
                  ),
                  const SizedBox(height: 10),
                  ElevatedButton(
                    key: const Key("create_account_field"),
                    onPressed: () {
                      // Input Validation
                      final String username = _usernameController.text.trim();
                      final String email = _emailController.text.trim();
                      final String password = _passwordController.text.trim();
                      final String confirmPassword =
...
                  ),
                  const SizedBox(height: 10),
                  Flexible(
                    child: Row(
                      children: [
                        TextButton(
                          key: const Key("login_field"),
                          onPressed: () {
                            context.go('/');
                          },
                          child: Text(
                            'Log in',
                            textAlign: TextAlign.start,
...
